--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -1,1 +1,5 @@
-<div>index test</div>
+<!-- build:include ../layout/header.html -->
+<!-- /build -->
+
+<!-- build:include ../widgets/banner.html -->
+<!-- /build -->
